# Trokk

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  frontend-prompt.md  go.mod  hardware_availability.md  pg_hba.conf  pivot.md  prd.md  run.bat  spec.md
.commandcode/taste/: taste.md
.commandcode/taste/architecture/: taste.md
cmd/server/: main.go
configs/agents/: consensus-agent.yaml  crypto-agent.yaml  fact-checker.yaml  financial-agent.yaml  github-agent.yaml  news-agent.yaml  osint-agent.yaml  research-agent.yaml
ferr/: frontend_update.md  package-lock.json  package.json  tsconfig.tsbuildinfo
ferr/src/app/: globals.css  layout.tsx  page.tsx
ferr/src/app/agents/: page.tsx
ferr/src/app/control/: page.tsx
ferr/src/app/dashboard/: page.tsx
ferr/src/app/investigations/: page.tsx
ferr/src/components/: Icon.tsx  TopNav.tsx
ferr/src/data/: index.ts
ferr/src/lib/: polling.ts
internal/config/: config.go
internal/handler/: agents.go  control.go  handler.go  health.go  investigations.go  messages.go
internal/middleware/: auth.go  logging.go  requestid.go
internal/model/: models.go
internal/store/pg/: agents.go  interactions.go  investigations.go  messages.go  pool.go
internal/store/redis/: client.go  stream.go
internal/stream/: cache.go
migrations/: 001_initial_schema.sql  002_agent_ticks.sql  003_investigations.sql
runtime/: config.py  llm_client.py  mesh.py  openrouter.py  orchestrator.py  pyproject.toml  scheduler.py  signals.py
runtime/agents/: base.py  consensus.py  fact_checker.py  research.py  specialists.py
(+12 files in other folders)
