[project]
name = "trokk-runtime"
version = "0.1.0"
description = "Trokk AI Intelligence Operating System — Python Agent Runtime"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
